tests/data/use-cluster-ip/ingress/mergeable/minion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: use-cluster-ip-ingress-minion
  annotations:
    nginx.org/use-cluster-ip: "true"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: use-cluster-ip.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
